_sass/_custom.scss
/* ... */
/* --------------------
    Film Page Elements
   -------------------- */

#film-banner {
    width: 100%;
    overflow-x: clip;

    img {
        width: 100%;
        height: 500px;
        object-fit: cover;
    }
}

@media screen and (max-width: 576px) {
    #film-banner img {
        height: 300px;
    }
}

.status-button {
    height: 2rem;
    width: 2rem;
    line-height: 0;
    position: relative;
    top: -2px;
    font-weight: 700;

    svg {
        position: relative;
        left: -6px;
    }
}

/* ----------------------
    Mosaic Visualization
   ---------------------- */

.mosaic {
    width: 100%;
    font-size: 15px;
}

.mosaic-item {
    display: inline-block;

    a {

        img {
            height: 15px;
            margin: 0;
            padding: 0;
            /* transition: all .25s ease-in-out; */
        }

        &:hover,
        &:focus {
            background-color: #f6754f;

            img {
                transform: scale(10) translateY(-10px);
            }
        }
    }
}

/* ------------
    Essays Page
   ------------ */
.tag-btn {
    font-size: .75em;
    padding: .25em .75em;
}

/* -------------
    Essay Pages
   ------------- */

.essay-page-narrow {
    max-width: 750px;
    margin-left: auto;
    margin-right: auto;
    /*
    p, a, h2, h3, h4, h5, h6, blockquote, .footnotes, .by-line {
        max-width: 750px;
        margin-left: auto;
        margin-right: auto;
    }
    */
}

.data-essay-page>p,ul,ol,h3,h4,h5,h6 {
    max-width: 750px;
    margin-left: auto;
    margin-right: auto;
    /*
    p, a, h2, h3, h4, h5, h6, blockquote, .footnotes, .by-line {
        max-width: 750px;
        margin-left: auto;
        margin-right: auto;
    }
    */
}

.data-essay-page>iframe {
    margin-bottom: 1rem;
    border: 1px solid $secondary;
}

/* -----------------
    Browse Settings
   ----------------- */

.browse-sort-menu {
    background-color: $dark;
    border: 1px solid $secondary;
}

.browse-sort-item {
    color: $light;

    &:hover {
        background-color: $primary-glow;
        color: $light;
    }

    &.active {
        background-color: $primary;
        color: $dark;
    }
}

.facet-options .dropdown-menu {
    color: $light;
    background-color: $dark;
    border: 1px solid $dark-border;
    min-width: 18rem;
}

.facet-options .boolean-operator {
    width: 30%;
}

.form-check-input {
    background-color: $light;
    border: 1px solid $dark-border;

    &:checked {
        background-color: $primary;
        border: 1px solid $primary;
    }

    &:focus {
        border: 1px solid $primary;
        box-shadow: 0 0 0 .25rem $primary-glow;
    }
}

.form-select, .form-select:focus {
    background-color: #000;
    color: $light;
    border: 1px solid $light;
    background-image: url(icons/chevron-down-light.svg);
}

.facet-select {
    position: relative;
    top: 1px;
}

#fieldSelect, #fieldSelect:focus {
    background-color: $secondary;
    color: $light;
    border: none;
}

.info-button {
    height: 2rem;
    width: 2rem;
    line-height: 0;
    transform: scale(.75);
    position: relative;
    top: -2px;
    font-weight: 700;
}

/* ---------------------------
    Glycerine Style Overrides
   --------------------------- */

/* border for annotation dialog */
.p-dialog.p-component {
    border: 1px solid $dark-border;
}

/* recolor annotation dialog and panel to match site theme */
.p-dialog .p-dialog-header,
.p-dialog .p-dialog-content,
.p-dialog .p-dialog-footer,
.p-datatable .p-datatable-thead>tr>th,
.p-datatable .p-datatable-tbody>tr,
.p-datatable .p-datatable-tbody>tr>td,
.p-paginator {
    background: $dark;
    color: $light;
    border-color: $dark-border;
}

.p-paginator .p-paginator-pages .p-paginator-page.p-highlight {
    background: $secondary;
    color: $light;
    border-color: $dark-border;
}

.p-paginator .p-paginator-first,
.p-paginator .p-paginator-prev,
.p-paginator .p-paginator-next,
.p-paginator .p-paginator-last {
    background-color: $secondary;
}

.p-tabview-title {
    color: $light;
}

.p-tabview .p-tabview-nav li.p-highlight .p-tabview-nav-link {
    background: $secondary;
    border-color: $primary;
    color: $light;
}

/* style buttons to match site theme */
.p-button {
    color: $dark;
    background: $primary;
    border: 1px solid $primary;

    &:enabled:hover {
        color: $dark;
        background: $light;
        border: 1px solid $light;
    }

    &:focus {
        box-shadow: 0 0 0 2px #fff, 0 0 0 4px $primary-glow, 0 1px 2px #000
    }

    &.p-button-outlined {
        color: $primary;
        border: 1px solid $primary;

        &:enabled:hover {
            color: $dark;
            background-color: $primary;
            border: 1px solid $primary;
        }
    }
}

.p-dialog .p-dialog-header .p-dialog-header-icon {
    filter: invert(100%);

    &:hover {
        background: $light;
        filter: invert(0%);
    }

    &:focus {
        outline: 0 none;
        outline-offset: 0;
        box-shadow: 0 0 0 .2rem $light-glow;
        background: $light;
        filter: invert(0%);
    }
}

/* hide tabview nav */
.p-tabview .p-tabview-nav {
    display: none;
}

/* give dialog and panel elements rounded corners */
.p-datatable-wrapper {
    border-radius: .25rem;
}

.p-paginator {
    border-radius: 0 0 .25rem .25rem;
}

.p-datatable .p-datatable-thead {
    border-radius: .25rem .25rem 0 0;
}

/* hide second "Close" button on annotation dialog */
.p-dialog .p-dialog-footer button {
    margin: .5rem .5rem 0 0;
    display: none;
}

/* hide dialog title and footer */
.p-dialog-title,
.p-dialog-footer {
    display: none;
}

/* adjust tabview panel */
.p-tabview .p-tabview-panels {
    padding: 0;
    background: $dark;
    color: $light;
}

/* adjust padding of dialog elements and move close button to upper right corner */
.p-dialog .p-dialog-header {
    padding: .5rem;
    justify-content: flex-end;
}
/* ... */

